--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -39,7 +39,7 @@
   = content_for :secondary_nav do
 
     %dd
-      = link_to "Back to Patient List", patients_path
+      = link_to "Renal Patient List", patients_path
     %dd
       = link_to "Add a Patient Event for #{@patient.full_name}", new_patient_patient_event_path(@patient)
     %dd
