--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -1,6 +1,6 @@
 .row
   %h5= "Clinical Summary for #{@patient.full_name} - KCH: #{@patient.local_patient_id}, Sex: #{I18n.t("enums.gender.#{@patient.sex}")}, DoB: #{@patient.dob}, Modal: "
-
+.row
   .columns.large-12.small-12
     %table.responsive
       %caption
@@ -27,13 +27,13 @@
               = event.description
             %td{:data => { :heading => "User"}}
               / TODO
+.row
+  .columns.large-12.small-12
+    %table.responsive
+      %caption
+        = link_to "All Current Medications", medications_index_patient_path
 
-.columns.large-12.small-12
-  %table.responsive
-    %caption
-      = link_to "All Current Medications", medications_index_patient_path
-
-      = render partial: "patients/medications", locals: { model: @patient_medications }
+        = render partial: "patients/medications", locals: { model: @patient_medications }
           
 .row
   = content_for :secondary_nav do
@@ -43,7 +43,7 @@
     %dd
       = link_to "Add a Patient Event for #{@patient.full_name}", new_patient_patient_event_path(@patient)
     %dd
-      = link_to "Edit Medications #{@patient.full_name}", medications_patient_path(@patient)
+      = link_to "Edit Medications for #{@patient.full_name}", medications_patient_path(@patient)
 
 
 
