--- a/app/assets/stylesheets/foundation/toggle.css.scss
+++ b/app/assets/stylesheets/foundation/toggle.css.scss
@@ -15,3 +15,13 @@
 .close-new-form {
   display: none;
 }
+
+.accordion dd > a.toggle-notes {
+  background: none;
+  border-radius: 0.5em;
+  padding: 0 0.3em 0 0.3em;
+}
+
+.accordion .accordion-navigation > .content.active, .accordion dd  > .content.toggle-content {
+  background: rgba(255, 255, 255, 0);
+}
