Fixed issues with clinical summary showing correct events and medications for patients

--- a/app/views/patients/_medications.html.haml
+++ b/app/views/patients/_medications.html.haml
@@ -13,7 +13,8 @@
     Prescribed On
 
 %tbody
-  - @patient_medications.each do |p|
+  - @patient.patient_medications.each do |p|
+   
     %tr{:class => "drug-#{p.medication.type.downcase}"}
       %td{:data => { :heading => "Type" }}
         = p.medication.type 
