--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -17,7 +17,7 @@
           User
 
       %tbody
-        - @patient_events.each do |event|
+        - @patient.patient_events.each do |event|
           %tr
             %td{:data => { :heading => "Added" }}
               = event.created_at
@@ -36,9 +36,9 @@
   .columns.large-12.small-12
     %table.responsive
       %caption
-        = link_to "All Current Medications", medications_index_patient_path
+        = link_to "All Current Medications", medications_index_patient_path(@patient)
 
-        = render partial: "patients/medications", locals: { model: @patient_medications }
+        = render partial: "patients/medications", locals: { model: @patient.patient_medications }
           
 .row
   = content_for :secondary_nav do
