--- a/app/views/patient_event_types/index.html.haml
+++ b/app/views/patient_event_types/index.html.haml
@@ -13,5 +13,5 @@
             = link_to "Delete", patient_event_type_path(t.id), id: "#{t.id}-pet", method: :delete, data: {confirm: "Are you sure you want to delete this option?"}
 
   .small-12.large-6.columns
-    = link_to "New Patient Event Type", new_patient_event_type_path, :class => "button tiny"
+    = link_to "Add New Patient Event Type", new_patient_event_type_path, :class => "button tiny"
 
