--- a/app/views/patients/index.html.haml
+++ b/app/views/patients/index.html.haml
@@ -5,14 +5,20 @@
     %caption Renal Patients
     %thead
       %tr
-        %th
-          Forename
-        %th
-          Surname
-        %th
-          NHS Number
         %th.g-center{ :colspan => 2 }
-          Actions
+          Options
+        %th
+          Patient
+        %th
+          NHS No.
+        %th
+          Hospital No.
+        %th
+          Sex
+        %th
+          DoB
+        %th
+          Age
 
     %tbody
       = render @patients
