Added age and modal to heading

--- a/app/views/patients/demographics.html.haml
+++ b/app/views/patients/demographics.html.haml
@@ -1,5 +1,6 @@
 .row
-  %h5(class = "left")= "Patient Demographics for #{@patient.full_name}"
+  %h5= "Patient Demographics for #{@patient.full_name} - Age: #{@patient.age}, Modal: "
+
 
 .row
   .large-12.columns
