--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -1,6 +1,6 @@
-.row
+.clinical-summary
   %h5= "Clinical Summary for #{@patient.full_name} - KCH: #{@patient.local_patient_id}, Age: #{@patient.age}, Sex: #{I18n.t("enums.gender.#{@patient.sex}")}, DoB: #{@patient.dob}, Modal: "
-.row
+.clinical-summary
   .columns.large-12.small-12
     %table.responsive
       %caption
@@ -32,7 +32,7 @@
                     = event.notes
             %td{:data => { :heading => "User"}}
               / TODO
-.row
+.clinical-summary
   .columns.large-12.small-12
     %table.responsive
       %caption
@@ -40,7 +40,7 @@
 
         = render partial: "patients/medications", locals: { model: @patient.patient_medications }
           
-.row
+.clinical-summary
   = content_for :secondary_nav do
 
     %dd
