--- a/app/views/patients/index.html.haml
+++ b/app/views/patients/index.html.haml
@@ -1,6 +1,13 @@
 .row
   %h5 Renal Patients
 
+.search.large-4.columns
+  = form_tag search_patients_path, :method => "get" do
+    = label_tag :patient_search, "Patient Search"
+    = search_field_tag  :patient_search, params[:patient_search]
+    = submit_tag "Find Patient" 
+
+.row
   %table.responsive
     %caption Renal Patients
     %thead
