Created nav link for individual patients with associated drop down options

--- a/app/views/patients/_patient.html.haml
+++ b/app/views/patients/_patient.html.haml
@@ -1,10 +1,8 @@
 %tr
   %td.g-center{ :data => { :heading => "Actions"}}
     = link_to "Demographics", demographics_patient_path(patient)
-  %td.g-center
-    = link_to "Clinical Summary", clinical_summary_patient_path(patient)
   %td{ :data => { :heading => "Forename"}}
-    = patient.full_name
+    = link_to patient.full_name, clinical_summary_patient_path(patient)
   %td{ :data => { :heading => "NHS No."}}
     = patient.nhs_number
   %td{ :data => { :heading => "Hospital No."}}
