--- a/app/views/layouts/patient_main.html.haml
+++ b/app/views/layouts/patient_main.html.haml
@@ -48,7 +48,7 @@
           = flash[:notice]
           <a href="#" class="close">&times;</a>
     
-    .large-12.columns
+    .main-body.large-12.columns.main-body
       = yield
 
     - if content_for? :secondary_nav
