--- a/app/views/patient_events/new.html.haml
+++ b/app/views/patient_events/new.html.haml
@@ -7,7 +7,6 @@
 = form_for [@patient, @patient_event], :method => :post do |f|
 
   .row
-
     =field_set_tag do
       %ul.no-bullet
         .large-6.columns
@@ -15,23 +14,22 @@
           = f.datetime_select(:date_time, { start_year: (5.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "datetime")
 
           %li
-            = f.label :user_id, "Entered by"
-            = f.text_field :user_id
+            = f.hidden_field :user_id
 
           %li
             = f.label :patient_event_type_id, "Patient Event Type"
             = f.collection_select(:patient_event_type_id, PatientEventType.all, :id, :name )
 
-          = link_to "Cancel", clinical_summary_patient_path(@patient), class: "button tiny left"
-
-        .large-6.columns
           %li
             = f.label :description, "Description"
             = f.text_field :description
-
+        
+        .large-6.columns 
           %li
             = f.label :notes, "Notes"
-            = f.text_area(:notes, :cols => 50, :rows => 6)
-          %li
-            = submit_tag "Save Patient Event", class: "button tiny right"
+            = f.text_area(:notes, :cols => 50, :rows => 11)
+        .row
+          = link_to "Cancel", clinical_summary_patient_path(@patient), class: "button tiny left"
+
+          = submit_tag "Save Patient Event", class: "button tiny right"
             
