Fixed hidden heading for patient info

--- a/app/views/patients/medications.html.haml
+++ b/app/views/patients/medications.html.haml
@@ -1,4 +1,5 @@
-%h5= "Patient Medications for #{@patient.full_name}"
+.row  
+  %h5= "Patient Medications for #{@patient.full_name}"
 
 .row
   = form_for @patient do |f|
