--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -65,7 +65,7 @@
           = flash[:notice]
           <a href="#" class="close">&times;</a>
 
-    .large-12.columns
+    .main-content
       = yield
 
     - if content_for? :secondary_nav
