Edited styling for sub nav

--- a/app/assets/stylesheets/foundation/navigation.css.scss
+++ b/app/assets/stylesheets/foundation/navigation.css.scss
@@ -2,6 +2,7 @@ nav.sub-nav-container {
   position: absolute;
   top: 2.9em;
   width: 100%;
+  border-radius: 0 0 1.5em 1.5em;
   background-color: #f2f2f2;
   margin-bottom: 1rem;
 
