--- a/app/views/patients/_patient_medication_fields.html.haml
+++ b/app/views/patients/_patient_medication_fields.html.haml
@@ -3,6 +3,11 @@
 
   = pm.hidden_field :patient_id
 
+  = label_tag :drug_search, "Drugs Search" do
+    = text_field_tag :drug_search, params[:drug_search], :class => "find_drug", :placeholder => "Search drug by name"
+
+  .drug-result
+
   = pm.label :medication_type, "Medication Type"
   = pm.select :medication_type, drug_select_options(pm.object.medication_type), {}, :class => "medication-type-select"
 
