--- a/app/assets/stylesheets/foundation/navigation.css.scss
+++ b/app/assets/stylesheets/foundation/navigation.css.scss
@@ -1,10 +1,11 @@
 nav.sub-nav-container {
   position: absolute;
-  top: 2.9em;
+  top: 2.8em;
   width: 100%;
   border-radius: 0 0 1.5em 1.5em;
   background-color: #f2f2f2;
   margin-bottom: 1rem;
+  z-index: 0;
 
   .sub-nav {
     padding: 10px 10px 10px 0;
