--- a/app/views/patients/_patient_medication_fields.html.haml
+++ b/app/views/patients/_patient_medication_fields.html.haml
@@ -3,8 +3,8 @@
 
   = pm.hidden_field :patient_id
 
-  = label_tag :drug_search, "Drugs Search" do
-    = text_field_tag :drug_search, params[:drug_search], :class => "find_drug", :placeholder => "Search drug by name"
+  = label_tag :drug_search, "Drug Search" 
+  = text_field_tag :drug_search, params[:drug_search], :class => "find_drug", :placeholder => "Search drug by name"
 
   .drug-result
 
