--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -71,7 +71,7 @@
     - if content_for? :secondary_nav
      
       %nav.sub-nav-container
-        .dl.sub-nav
+        %dl.sub-nav
           %dt Navigate To:
           = content_for :secondary_nav
         .g-cb
