--- a/app/views/patients/_patient_medication_fields.html.haml
+++ b/app/views/patients/_patient_medication_fields.html.haml
@@ -3,17 +3,24 @@
 
   = pm.hidden_field :patient_id
 
-  = label_tag :drug_search, "Drug Search" 
-  = text_field_tag :drug_search, params[:drug_search], :class => "find_drug", :placeholder => "Search drug by name"
-
-  .drug-result
-
   = pm.label :medication_type, "Medication Type"
   = pm.select :medication_type, drug_select_options(pm.object.medication_type), {}, :class => "medication-type-select"
 
-  = pm.label :medication_id, "Select Drug"
-  = pm.collection_select :medication_id, drugs_for(pm.object.medication_type), :id, :name, {}, :class => "drug-select"
+  / Only show this for standard
+  .standard
+    = label_tag :drug_search, "Drug"
+    = text_field_tag :drug_search, pm.object.persisted? ? pm.object.medication.name : nil, :class => "find_drug", :placeholder => "Search drug by name"
 
+    %ul.no-bullet.drug-results
+
+    = pm.hidden_field :medication_id, :class => "selected-medication-id"
+
+  / Only show this for ESA/ Imnosupressnt.
+  .esa-or-immno
+    = pm.label :medication_id, "Select Drug"
+    = pm.collection_select :medication_id, drugs_for(pm.object.medication_type), :id, :name, {}, :class => "drug-select"
+
+  / Same for both
   = pm.label :dose
   = pm.text_field :dose
 
