--- a/app/views/patient_event_types/index.html.haml
+++ b/app/views/patient_event_types/index.html.haml
@@ -1,4 +1,8 @@
-%h5 All Patient Event Types
+.row
+  %h5 All Patient Event Types
+
+.row
+  = link_to "Add New Patient Event Type", new_patient_event_type_path, :class => "button tiny"
 
 .row
   .small-12.large-6.columns
@@ -12,6 +16,4 @@
           .small-4.large-2.columns
             = link_to "Delete", patient_event_type_path(t.id), id: "#{t.id}-pet", method: :delete, data: {confirm: "Are you sure you want to delete this option?"}
 
-  .small-12.large-6.columns
-    = link_to "Add New Patient Event Type", new_patient_event_type_path, :class => "button tiny"
-
+  
