Edited styling for headers in drugs/patient event types

--- a/app/views/patient_event_types/new.html.haml
+++ b/app/views/patient_event_types/new.html.haml
@@ -1,5 +1,5 @@
 .row
-  %h4 Add a New Patient Event Type
+  %h4 Add New Patient Event Type
 
 .row
   = render partial: "shared/errors", locals: { model: @patient_event_type }
