WIP added forms/display saved info for problems feature

--- a/app/assets/stylesheets/foundation/toggle.css.scss
+++ b/app/assets/stylesheets/foundation/toggle.css.scss
@@ -12,6 +12,20 @@
   }
 }
 
+#new-probs-form:target {
+  .hide {
+    display: block;
+  }
+
+  .close-new-form {
+    display: inline-block;
+  }
+
+  .toggle {
+    display: none;
+  }
+}
+
 .close-new-form {
   display: none;
 }
