--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -57,7 +57,7 @@
     %dd
       = link_to "Demographics", demographics_patient_path(@patient)
     %dd
-      = link_to "Problems", "#"
+      = link_to "Problems", problems_patient_path(@patient)
     %dd
       = link_to "Meds", medications_patient_path(@patient)
     %dd
