--- a/app/views/patients/_problems.html.haml
+++ b/app/views/patients/_problems.html.haml
@@ -2,12 +2,18 @@
   %th
     Problem
   %th
+    Entered By
+  %th
     Date
 
-%tbody   
-  %tr{:class => "problem"}
-    %td{:data => { :heading => "Problem" }}
+%tbody
+  - @patient.problems.each do |p|   
+    %tr{:class => "problem"}
+      %td{:data => { :heading => "Problem" }}
+        = p.description 
+      %td{:data => { :heading => "Date" }}
+        = p.user_id
+      %td{:data => { :heading => "Date" }}
+        = p.created_at.strftime("%d/%m/%Y")
       
-    %td{:data => { :heading => "Date" }}
-     
-    
+      
