Updated test for adding another problem to form

--- a/app/views/patients/_problem_form.html.haml
+++ b/app/views/patients/_problem_form.html.haml
@@ -2,7 +2,7 @@
 = pb.hidden_field :patient_id
 
 = pb.label :description
-= pb.text_field :description
+= pb.text_field :description, :class => "probs-description"
 
 //change to hidden 
 = pb.label :user_id
