--- a/app/views/patient_events/index.html.haml
+++ b/app/views/patient_events/index.html.haml
@@ -24,10 +24,7 @@
     %tbody
       = render @patient_events
 
-= content_for :secondary_nav do
+.clinical-summary
+  = content_for :secondary_nav do  
+    = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
 
-  %dd
-    = link_to "Add a Patient Event for #{@patient.full_name}", new_patient_patient_event_path(@patient)
-
-  %dd
-    = link_to "Clinical Summary for #{@patient.full_name}", clinical_summary_patient_path(@patient)
