--- a/app/views/patients/demographics.html.haml
+++ b/app/views/patients/demographics.html.haml
@@ -1,7 +1,8 @@
 .row
-  %h5= "Patient Demographics for #{@patient.full_name} - Age: #{@patient.age}, Modal: "
+  %h5.fi-clipboard-notes
+    = "Patient Info for #{@patient.full_name} - Age: #{@patient.age}, Modal: "
 
-
+  = link_to "Edit", edit_patient_path(@patient), :title => "Edit demographics",:class => "fi-clipboard-pencil"
 .row
   .large-12.columns
     = field_set_tag do
@@ -76,10 +77,6 @@
          
       = render @patient.address_at_diagnosis if @patient.address_at_diagnosis
   
-= content_for :secondary_nav do
-  %dd
-    = link_to "Renal Patient list", patients_path
-  %dd
-    = link_to "Edit Demographics for #{@patient.full_name}", edit_patient_path(@patient)
-  %dd
-    = link_to "Clinical Summary for #{@patient.full_name}", clinical_summary_patient_path(@patient)
+.clinical-summary
+  = content_for :secondary_nav do  
+    = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
