--- a/app/views/patients/index.html.haml
+++ b/app/views/patients/index.html.haml
@@ -7,9 +7,11 @@
     %thead
       %tr
         %th.g-center
+          Letters
+        %th.g-center
           Admin
         %th
-          Patient
+          Patient - ClinSum
         %th
           NHS No.
         %th
