--- a/app/views/patients/medications_index.html.haml
+++ b/app/views/patients/medications_index.html.haml
@@ -9,9 +9,7 @@
 
         = render partial: "patients/medications", locals: { model: @patient_medications }
 
-.row
-  = content_for :secondary_nav do
-    %dd
-      = link_to "Edit Medications #{@patient.full_name}", medications_patient_path(@patient)
-    %dd
-      = link_to "Clinical Summary for #{@patient.full_name}", clinical_summary_patient_path(@patient.id)
+.clinical-summary
+  = content_for :secondary_nav do  
+    = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
+
