--- a/app/views/patients/problems.html.haml
+++ b/app/views/patients/problems.html.haml
@@ -50,3 +50,9 @@
               = pb.label :_destroy, "Terminate?"
 
     = f.submit "Save Problems", :class => "button tiny right mt"
+
+.clinical-summary
+  = content_for :secondary_nav do  
+    = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
+
+
