Changed tables to lists in clinical summary for problems and medications

--- a/app/assets/stylesheets/foundation/patient_medications.css.scss
+++ b/app/assets/stylesheets/foundation/patient_medications.css.scss
@@ -1,12 +1,12 @@
-.accordion dd > a.drug-drug, .drug-drug td {
+.accordion dd > a.drug-drug, li.drug-drug {
   background: #CCFFCC;
 }
 
-.accordion dd > a.drug-esa, .drug-esa td {
+.accordion dd > a.drug-esa, li.drug-esa {
   background: #FFFF99;
 }
 
-.accordion dd > a.drug-immunosuppressant, .drug-immunosuppressant td {
+.accordion dd > a.drug-immunosuppressant, li.drug-immunosuppressant {
   background: #CCFFFF;
 }
 
