--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -4,19 +4,28 @@
 
 .clinical-summary
   .columns.large-6.small-6
-    %table.responsive
-      %caption
-        = link_to "Problems", problems_patient_path(@patient)
+    %h5
 
-        = render partial: "patients/problems"
+      = link_to "Problems", problems_patient_path(@patient)
 
+      %ul.no-bullet
+        - @patient.problems.each do |p|
+     
+          %li
+            = "#{p.description}, #{p.created_at.strftime("%d/%m/%Y")}, #{p.user_id}"
+                      
 .clinical-summary
-  .columns.large-6.small-6
-    %table.responsive
-      %caption
-        = link_to "All Current Medications", medications_index_patient_path(@patient)
+  .columns.large-6
+    %h5
+      
+      = link_to "All Current Medications", medications_index_patient_path(@patient)
 
-        = render partial: "patients/medications", locals: { model: @patient.patient_medications }
+      %ul.no-bullet
+        - @patient.patient_medications.each do |p|
+     
+          %li{:class => "drug-#{p.medication.type.downcase}"}
+            
+            = "#{p.medication.type}, #{p.medication.name}, #{p.dose}, #{I18n.t("enums.route.#{p.route}")}, #{p.frequency}, #{p.date}"          
 
 .clinical-summary
   .columns.large-12.small-12
