--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,18 +16,18 @@
       %ul.title-area
         %li.name
           %h1
-            = link_to "Renalwarev2", patients_path
+            = link_to "Renalwarev2", patients_path, :title => "Home"
 
       %section.top-bar-section
         - if @patient && @patient.persisted?
           %ul.left
             %li.has-dropdown
-              = link_to "#{@patient.full_name}", clinical_summary_patient_path(@patient), :title => "Clinical Summary"
+              = link_to " " + "#{@patient.full_name}", clinical_summary_patient_path(@patient), :title => "Clinical Summary", :class => "fi-graph-trend"
               %ul.dropdown
                 %li
                   = link_to "New Letter", "#"
                 %li
-                  = link_to "Add Problem", problems_patient_path(@patient)
+                  = link_to "Manage Problems", problems_patient_path(@patient)
                 %li
                   = link_to "Manage Medications", medications_patient_path(@patient)
                 %li
