Changed heading of Patient column to Clinical Summary

--- a/app/views/patients/index.html.haml
+++ b/app/views/patients/index.html.haml
@@ -11,7 +11,7 @@
         %th.g-center
           Admin
         %th
-          Patient - ClinSum
+          Clinical Summary
         %th
           NHS No.
         %th
